@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-StaticInstall
 
 {{$NEXT}}
+          - also check for .pm, .pod, .pl files in the root
 
 0.003     2015-07-14 03:24:15Z
           - cooperate with [ModuleBuildTiny]'s static = auto feature
